--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,9 @@ button {
   margin-left: 510px;
   margin-right: 500px;
   box-shadow: 
-  2px 2px 2px 2px #463c30,
-  4px 4px 4px 4px #463c30;
+  0px 2px 2px 2px #463c30,
+  0px 4px 4px 4px #c76f04,
+  8px 8px 8px 2px #b0b304;
   padding-bottom: 10px;
   border-radius: 15px;
 }
@@ -61,8 +62,6 @@ button {
 
 
 .change-state {
-  display: flex;
-  flex-wrap: wrap;
   display: grid;
   grid-column: 1 / span 1;
   /* grid-template-columns: repeat(3 1fr); */
@@ -86,9 +85,6 @@ button {
 }
 
 
-
-
-
 button:hover {
   opacity: 0.5;
   background-color: var(--secondary);
@@ -107,7 +103,6 @@ button:hover {
   background-color: var(--primary);
   width: 70px;
   height: 47.5px;
-  
   /* padding: 3px; */
 }
 .equal-sign-btn{
@@ -122,6 +117,8 @@ button:hover {
  height: 200px;
 }
 
+/* The flex CSS shorthand property sets how a flex item will grow or shrink 
+to fit the space available in its flex container. */
 .integers button {
   border: var(--border);
   flex: 1 1 33.333%;
